samples/_failures_safe/1761340480_f77eaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d77e3e6.c: In function ‘main’:
./samples/SAFE/__tmp_6d77e3e6.c:158:13: error: expected declaration or statement at end of input
  158 |             destroy_state_machine(sm);
      |             ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6d77e3e6.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d77e3e6.c:158:13: error: expected declaration or statement at end of input
